--- a/linear inference.ipynb
+++ b/linear inference.ipynb
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Paquetes"
+        "## Packages"
       ],
       "metadata": {
         "id": "es45hwO3gTxV"
